--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chichipan",
   "version": "1.1.8",
-  "homepage": "https://brayanchichipan.github.io/portfolio-react",
+  "homepage": "https://brayanchichipan.github.io/porfolio-react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
